--- a/Publish.android/zltx_hoolai/res/values/strings.xml
+++ b/Publish.android/zltx_hoolai/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">逐鹿天下</string>
+    <string name="app_name">赤壁</string>
 </resources>
