--- a/proj.android/res/values-zh-rcn/strings.xml
+++ b/proj.android/res/values-zh-rcn/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">逐鹿天下</string>
+    <string name="app_name">赤壁</string>
 </resources>
